<resources>
    <string name="app_name">watchify</string>

    <!--INSERT KEY HERE-->
    <string name="api_key"></string>


    <string name="unknown_error">Oops! This is embarrassing! Please try again later</string>
    <string name="no_internet_connectivity">No Internet Connection Available</string>
    <string name="sort_popularity_title">Show Popular Movies</string>
    <string name="sort_ratings_title">Show Top Rated Movies</string>
    <string name="show_card_view">Show Card View</string>
    <string name="show_settings">Settings</string>
    <string name="popular_movies_activity_title">Watchify : Popular Movies</string>
    <string name="top_movies_activity_title">Watchify : Top Rated Movies</string>

    <!--Fragments TextViews and Buttons-->
    <string name="next_button_title">next</string>
    <string name="done_button_title">done</string>
    <string name="skip_button_title">skip tutorial</string>
    <string name="text_fragment_one">Get all the details about the movie you are waiting for since forever!</string>
    <string name="text_fragment_two">Watching Movies the right way \n Watchify </string>
    <string name="text_fragment_three">Watch Movies without wasting money on useless ones</string>

    <string name="feature_not_ready">This feature is under development</string>
    <string name="MAIN_JSON_RESPONSE_KEY">results</string>
    <string name="TITLE_KEY">original_title</string>
    <string name="VOTE_KEY">vote_average</string>
    <string name="DESCRIPTION_KEY">overview</string>
    <string name="IMAGE_URL_PATH_KEY">poster_path</string>
    <string name="BACKDROP_IMAGE_URL_PATH_KEY">backdrop_path</string>
    <string name="ORIGINAL_LANGUAGE">original_language</string>
    <string name="RELEASE_DATE">release_date</string>
    <string name="RESTRICTION">adult</string>

    <string name="image_content_description">The movie poster</string>
    <string name="ratings_tag">Ratings: </string>
    <string name="adult_tag">Adult: </string>
    <string name="release_date_tag">Release Date: </string>
    <string name="default_tag">N/A</string>
</resources>
