<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="false"
        android:id="@+id/menu_option_settings"
        android:icon="@drawable/baseline_settings_white_18dp"
        android:title="@string/show_settings"
        app:showAsAction="ifRoom" />

    <!--TOP RATED-->
    <item
        android:id="@+id/menu_option_sort_ratings"
        android:orderInCategory="1"
        android:title="@string/sort_ratings_title"
        app:showAsAction="never" />

    <!--POPULAR-->
    <item
        android:id="@+id/menu_option_sort_popular"
        android:orderInCategory="2"
        android:title="@string/sort_popularity_title"
        app:showAsAction="never" />

    <item
        android:visible="false"
        android:id="@+id/menu_option_card_view"
        android:orderInCategory="3"
        android:title="@string/show_card_view"
        app:showAsAction="never" />

</menu>