<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentGRAY"
    tools:context=".FirstRunScreens.ScreenTwo">

    <TextView
        android:textColor="@color/colorBrightGreen"
        android:layout_marginTop="@dimen/text_view_margin_top"
        android:textSize="@dimen/text_view_text_size"
        android:textAlignment="center"
        android:text="@string/text_fragment_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="M"
        android:textColor="@color/colorBrightGreen"
        android:textSize="@dimen/splash_screen_logo_size" />

    <RelativeLayout
        android:layout_margin="@dimen/text_view_margin_top"
        android:padding="@dimen/button_padding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/skip_button_2"
            android:textColor="@color/colorBlack"
            android:text="@string/skip_button_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height" />

        <Button
            android:id="@+id/next_button_2"
            android:textColor="@color/colorBlack"
            android:text="@string/next_button_title"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height" />
    </RelativeLayout>

</LinearLayout>